# BoopAI

./: .gitignore  BoopAI.sln  README.md
BoopAI/: Boop.cpp  Boop.h  BoopAI.sln  BoopAI.vcxproj  BoopAI.vcxproj.filters  ContactListener.h  Entity.h  FPSTimer.cpp  FPSTimer.h  Food.cpp  Food.h  Install.msi  NeuralNetwork.cpp  NeuralNetwork.h  SimpleVertexShader.vertexshader  Source.cpp  World.cpp  World.h  main.cpp  math_3d.cpp  names.h  shader.cpp  shader.h  tournament.cpp  tournament.h
BoopAI/AnooAI Setup/: AnooAI Setup.vdproj
BoopAI/BoopAI/: Boop.cpp  Boop.h  BoopAI.vcxproj  BoopAI.vcxproj.filters  ContactListener.h  DNA.cpp  Entity.h  Food.cpp  Food.h  NeuralNetwork.cpp  NeuralNetwork.h  SimpleFragmentShader.fragmentshader  Source.cpp  World.cpp  World.h  example.csv  math_3d.cpp  math_3d.h
BoopAI/Debug/: vc140.idb
BoopAI/Installer/: Installer.vdproj
BoopAI/Release/: NativeCodeAnalysis.read.1.tlog  shader.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  (+1 more)
BoopAI_Web/: Boop.cpp  Boop.h  BoopAI_Web.vcxproj  BoopAI_Web.vcxproj.filters  BoopPlanet.cpp  BoopPlanet.h  BoopUniverse.cpp  BoopUniverse.h  CMakeLists.txt  Main.cpp  MathUtilities.cpp  MathUtilities.h  NeuralNetwork.cpp  anooserve.com.crt  anooserve.com.key  client_wss.hpp  makefile
BoopAI_Web_Reeve/: BoopAI_Web.vcxproj  BoopAI_Web.vcxproj.filters  HTTPProcessor.cpp  HTTPProcessor.h  ServerSocket.cpp  Socket.cpp  SocketHandler.cpp  Source.cpp  Source.h  TimeKeeper.h  websocket.cpp  websocket.h
CatsyAI/: CatsyAI.sln
CatsyAI/CatsyAI/: DNA.h  (+17 more)
Release/: BoopAI.iobj  BoopAI.ipdb
Setup/: Setup.vdproj
(+17 files in other folders)
